# Laboratorio04

For recursivo/: CMakeLists.txt  main.cpp
Numeros crecientes/: CMakeLists.txt  main.cpp
Numeros primos/: CMakeLists.txt  main.cpp
Operadores logicos/: CMakeLists.txt  main.cpp
